# pseudocode

./: .gitattributes  .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.cursor/rules/: agent-session-log.mdc
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  pages.yml
Formula/: pseudocode.rb
docs/: agent-session-log.md  cli.md  error-codes.md  error-handling.md  examples.md  faq.md  getting-started.md  github-pages.md  glossary.md  implementation.md  index.md  installation.md  matplotlib-style.md  numpy-style.md  package-manager.md  package-managers.md  pandas-style.md  recent-sessions.md  syntax-reference.md  try-online.md  vscode.md
docs/reference/: README.md  arrays.md  builtins.md  language.md  oop-and-types.md  strings-and-concatenation.md
docs/stdlib/: index.md  math.md  os.md  random.md  system.md  time.md
docs/tutorial/: index.md
examples/: README.md  function.pseudo  hello.pseudo  loop.pseudo  main.pseudo
examples/matplotlib-style/: 01-line-y-from-x.pseudo  02-print-xy-table.pseudo  03-write-xy-pairs-file.pseudo  04-ascii-column-chart.pseudo  05-ascii-histogram-bins.pseudo  06-two-series-console.pseudo  07-mpl-workspace-globals.pseudo  README.md
examples/numpy-style/: 00-import-np-sum-mean.pseudo  01-sum-and-mean.pseudo  02-fill-zeros-ones-linspace.pseudo  03-dot-product.pseudo  04-max-and-argmax.pseudo  05-matmul-vector.pseudo  06-add-scalar-to-array.pseudo  07-np-workspace-functions.pseudo  README.md
examples/pandas-style/: 01-parallel-columns.pseudo  README.md  (+7 more)
packaging/: homebrew-core-pseudocode.rb
registry/: registry-schema.md
scripts/: brew-pseudocode.sh  build.sh  check-pages-remote.sh  dev.sh  homebrew-sync-tag-sha.sh  install-macos.sh  install-windows.ps1  install.sh  uninstall-local.sh
site/: README.md  build.py  config.json  requirements-site.txt
src/: main.c  pc_ast.c  pc_ast.h  pc_common.c  pc_common.h  pc_error.c  pc_error.h  pc_error_codes.h  pc_interp.c  pc_interp.h  pc_lexer.c  pc_lexer.h  pc_parser.c  pc_parser.h  pc_pkg_shared.c  pc_pkg_shared.h  pc_repl.c  pc_repl.h  pc_stdlib.c  pc_stdlib.h  pc_token.c  pc_token.h  pc_value.c  pc_value.h  pc_welcome.c  pc_welcome.h  pkg_main.c
tools/: pseudocode_idle.py
(+40 files in other folders)
